# python-conver

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
src/conver/: __init__.py  _convert.py  cli.py  conver.py
src/conver/scripts/: convert.jxa  convert.ps1
